maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:36: error: method keepHandOnSideWall has return statement; needs result type
    return etat
    ^